<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_map"
        android:title="@string/action_map"
        app:showAsAction="never" />
    <item
        android:id="@+id/find_direction"
        android:title="@string/qibla"
        app:showAsAction="never" />
    <item
        android:id="@+id/dua_activity"
        android:title="@string/dua"
        app:showAsAction="never" />
    <item
        android:id="@+id/names_activity"
        android:title="@string/names"
        app:showAsAction="never" />
    <item
        android:id="@+id/about_activity"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>