<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#55000000">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/title_widget">
    <TextView
        android:id="@+id/date_widget"
       style = "@style/TimesWidgetTitle"
        android:text="Monday, 8 Thul-Qidah "
        />

    <TextView
        android:id="@+id/textView_location"
        style = "@style/TimesWidgetTitle"
        android:text="Bishkek"
        android:textAlignment="textEnd"/>

</LinearLayout>


<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/widget_margin"
    android:id="@+id/widget"
   >


    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="@dimen/widget_padding">

        <TextView
           style="@style/TimesWidgetText"
           android:text="@string/fajr"
            />

        <TextView
            android:id="@+id/textView_fajr"
            style="@style/TimesWidgetTime"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="@dimen/widget_padding">
        <TextView
            style="@style/TimesWidgetText"
            android:text="@string/sunrise"
            />

        <TextView
            android:id="@+id/textView_sunrise"
            style="@style/TimesWidgetTime"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="@dimen/widget_padding">
        <TextView
            style="@style/TimesWidgetText"
            android:text="@string/zuhr"/>

        <TextView
            android:id="@+id/textView_zuhr"
            style="@style/TimesWidgetTime"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="@dimen/widget_padding">
        <TextView
            style="@style/TimesWidgetText"
            android:text="@string/asr" />

        <TextView
            android:id="@+id/textView_asr"
            style="@style/TimesWidgetTime"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="@dimen/widget_padding">
        <TextView
            style="@style/TimesWidgetText"
            android:text="@string/magreeb"/>

        <TextView
            android:id="@+id/textView_magreeb"
            style="@style/TimesWidgetTime"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="@dimen/widget_padding">
        <TextView
            style="@style/TimesWidgetText"
            android:text="@string/isha"/>

        <TextView
            android:id="@+id/textView_isha"
            style="@style/TimesWidgetTime"/>

    </LinearLayout>


</LinearLayout>

</LinearLayout>